# openCar-AndroidAuto-Stack

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mycar1/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mycar1/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mycar1/: ExampleUnitTest.kt
effect/: build.gradle.kts
effect/src/androidTest/java/com/example/effect/: ExampleInstrumentedTest.kt
effect/src/main/cpp/: CMakeLists.txt  EffectOpenCar.cpp  effect.cpp  eq.h  limiter.h  opencar_dsp.h
effect/src/main/java/com/example/effect/: NativeLib.kt
effect/src/main/res/raw/: audio_effects.xml
effect/src/test/java/com/example/effect/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
